tempfile/auto_impl/tests/compile-fail/attr_on_fn.stderr
error: expected `trait`
 --> tests/compile-fail/attr_on_fn.rs:5:1
  |
5 | fn foo(s: String) -> u32 {
  | ^^
